---
title: Zealand Eksamens Oversigt - Domænemodel
---
classDiagram
    class User {
        +email
        +navn
        +rolle
        +login()
        +logout()
    }
    
    class Profile {
        +navn
        +adresse
        +mobilnr
        +opdaterProfil()
    }
    
    class Team {
        +navn
        +beskrivelse
        +medlemmer
        +tilføjMedlem()
        +fjernMedlem()
    }
    
    class Eksamen {
        +titel
        +beskrivelse
        +type
        +afleveringstidspunkt
        +eksamenstidspunkt
        +lokation
        +opretEksamen()
        +tilføjDeltager()
    }
    
    User "1" -- "1" Profile : har
    User "1" -- "*" Team : medlem af
    User "1" -- "*" Eksamen : opretter
    User "*" -- "*" Eksamen : deltager i
    Team "*" -- "*" Eksamen : tilknyttet
    
    note for User "Roller: Guest, Student, Lecturer, Planner, Censor, Admin"
    note for Eksamen "Typer: Skriftlig, Mundtlig, Mundtlig+Skriftlig, Projekt"

